# quick_cmake_tutorial

./: .gitignore  CMakeLists.txt  README.md  calc.cpp  main.cpp
notebook/: Quick CMake tutorial.md  envnote.txt
test/: CMakeLists.txt
